# SKN24-FINAL-4Team

./: .gitignore  CHANGELOG.md  README.md  monggeul_planning.md  monggeul_requirements.md  pyproject.toml  requirements.txt  vscode-extensions.txt
adapters/_shared/: openai_compat.py
adapters/character_creation/: _prompts.py  local_storage.py  memory_repo.py  midm_llm.py  openai_image.py  openai_llm.py  openai_vlm.py  s3_storage.py
adapters/feed_generation/: midm_llm.py
adapters/quest_generation/: _prompts.py  fake_llm.py  memory_repo.py  midm_llm.py  openai_llm.py
adapters/todo_creation/: _prompts.py  fake_llm.py  memory_quest_counter.py  memory_repo.py  midm_llm.py  openai_llm.py  quest_dispatch_adapter.py
agents/character_creation/: __init__.py  debug.py  exceptions.py  graph.py  pipeline.py  protocols.py  repository.py  schemas.py  state.py
agents/feed_generation/: debug.py  exceptions.py  graph.py  pipeline.py  protocols.py  schemas.py  state.py
agents/quest_generation/: _llm_runner.py  _pool.py  exceptions.py  pipeline.py  protocols.py  schemas.py
assets/: character_creation_graph.mmd
data/: README.md  demo_chars.json
docs/: AI_RULES.md  ARCHITECTURE.md  DATA_MODEL.md  FEATURES.md  MIDTERM_TECH_APPEAL.md  PRESENTATION.md  PRODUCT_SPEC.md  TODO.md  requirements.xlsx
notebooks/: character_creation_graph_viz.ipynb  feed_generation_pipeline_viz.ipynb  quest_generation_pipeline_viz.ipynb  todo_creation_graph_viz.ipynb  todo_creation_multi_turn_graph_viz.ipynb
src/ingestion/: s3_sync.py
streamlit_app/: app.py  ports_factory.py
tests/: conftest.py
(+135 files in other folders)
