[project]
name = "mongle-village"
version = "0.1.0"
description = "Monggeul Village — character / todo / quest / feed AI agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "boto3>=1.34",
    "langgraph>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]
ui = [
    "streamlit>=1.36",
    "openai>=1.50",
    "langchain-openai>=0.3,<1",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not contract' --cov=agents --cov-report=term-missing --cov-fail-under=80"
markers = [
    "contract: requires external services (OPENAI_API_KEY etc.); skipped by default",
]

[tool.coverage.run]
branch = true
source = ["agents"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "vulture>=2.16",
]
